--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,7 @@
     <!--Main-->
     <main>
         <section>
+            <h1>Портфоліо з фотографіями</h1>
             <ul>
                 <li><a href="" Усі</a></li>
                 <li><a href="">Веб-сайти</a></li>
@@ -35,40 +36,40 @@
                 <li><a href="">Маркетинг</a></li>
             </ul>
             <ul>
-                <li><img src="./images/img8.jpg" alt="Ноутбук" width="370">
-                    <h3>Технокряк</h3>
+                <li><a href=""></a><img src="./images/img8.jpg" alt="Ноутбук" width="370">
+                    <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                 </li>
-                <li><img src="./images/img9.jpg" alt="Баскетбол" width="370">
-                    <h3>Постер Nwe Orlean vs Golden Star</h3>
+                <li><a href=""></a><img src="./images/img9.jpg" alt="Баскетбол" width="370">
+                    <h2>Постер Nwe Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </li>
-                <li><img src="./images/img10.jpg" alt="Логотип" width="370">
-                    <h3>Ресторан Seafood</h3>
+                <li><a href=""></a><img src="./images/img10.jpg" alt="Логотип" width="370">
+                    <h2>Ресторан Seafood</h2>
                     <p>Додаток</p>
                 </li>
-                <li><img src="./images/img11.jpg" alt="Навушники" width="370">
-                    <h3>Проєкт Prime</h3>
+                <li><a href=""></a><img src="./images/img11.jpg" alt="Навушники" width="370">
+                    <h2>Проєкт Prime</h2>
                     <p>Маркетинг</p>
                 </li>
-                <li><img src="./images/img12.jpg" alt="Упаковка з картону" width="370">
-                    <h3>Проєкт Boxes</h3>
+                <li><a href=""></a><img src="./images/img12.jpg" alt="Упаковка з картону" width="370">
+                    <h2>Проєкт Boxes</h2>
                     <p>Додаток</p>
                 </li>
-                <li><img src="./images/img13.jpg" alt="Монітор" width="370">
-                    <h3>Inspiration has no Borders</h3>
+                <li><a href=""></a><img src="./images/img13.jpg" alt="Монітор" width="370">
+                    <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
-                <li><img src="./images/img14.jpg" alt="Журнал" width="370">
-                    <h3>Видання Limited Edition</h3>
+                <li><a href=""></a><img src="./images/img14.jpg" alt="Журнал" width="370">
+                    <h2>Видання Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
-                <li><img src="./images/img15.jpg" alt="Бірка" width="370">
-                    <h3>Проєкт LAB</h3>
+                <li><a href=""></a><img src="./images/img15.jpg" alt="Бірка" width="370">
+                    <h2>Проєкт LAB</h2>
                     <p>Маркетинг</p>
                 </li>
-                <li><img src="./images/img16.jpg" alt="Робоче місце" width="370">
-                    <h3>Growind Business</h3>
+                <li><a href=""></a><img src="./images/img16.jpg" alt="Робоче місце" width="370">
+                    <h2>Growind Business</h2>
                     <p>Додаток</p>
                 </li>
             </ul>
