Робить Фільтр на сторінці у вигляді кнопки

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </section>
       <!--Describe-->
       <h2>Що нас характеризує</h2>
-      <section>
-        <ul class="describe">
+      <section class="describe">
+        <ul>
           <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
@@ -50,7 +50,7 @@
         </ul>
       </section>
       <!--What we doing-->
-      <section>
+      <section class="our-business">
         <h2>Чим ми займаємося</h2>
         <ul>
           <li><img src="./images/img1.jpg" alt="laptop algorithm" width="370" height="294"></li>
@@ -59,7 +59,7 @@
         </ul>
       </section>
       <!--Our kommand-->
-      <section>
+      <section class="our-command">
         <h2>Наша команда</h2>
         <ul>
           <li><img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
