--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,14 @@
     </header>
     <!--Main-->
     <main>
-        <section>
+        <section class="portfolio">
             <h1>Портфоліо з фотографіями</h1>
             <ul>
-                <li><a href="#">Усі</a></li>
-                <li><a href="#">Веб-сайти</a></li>
-                <li><a href="#">Додатки</a></li>
-                <li><a href="#">Дизайн</a></li>
-                <li><a href="#">Маркетинг</a></li>
+                <li><button type="button">Усі</button></li>
+                <li><button type="button">Веб-сайти</button></li>
+                <li><button type="button">Додатки</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
             </ul>
             <ul>
                 <li href="#"><img src="./images/img8.jpg" alt="Ноутбук" width="370">
