--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
       <!--Menu-->  
       <nav>
         <ul class="menu-list">                 
-          <li><a href="#">Студія</a></li>
+          <li><a href="./index.html">Студія</a></li>
           <li><a href="#">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
