--- a/portfolio.html
+++ b/portfolio.html
@@ -43,35 +43,35 @@
                     <h2>Технокряк</h2>
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
-                <li href="#"><img src="./images/img9.jpg" alt="Баскетбол" width="370">
+                <li><img src="./images/img9.jpg" alt="Баскетбол" width="370">
                     <h2>Постер Nwe Orlean vs Golden Star</h2>
                     <p><span class="accent">Дизайн</span></p>
                 </li>
-                <li href="#"><img src="./images/img10.jpg" alt="Логотип" width="370">
+                <li><img src="./images/img10.jpg" alt="Логотип" width="370">
                     <h2>Ресторан Seafood</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
-                <li href="#"><img src="./images/img11.jpg" alt="Навушники" width="370">
+                <li><img src="./images/img11.jpg" alt="Навушники" width="370">
                     <h2>Проєкт Prime</h2>
                     <p><span class="accent">Маркетинг</span></p>
                 </li>
-                <li href="#"><img src="./images/img12.jpg" alt="Упаковка з картону" width="370">
+                <li><img src="./images/img12.jpg" alt="Упаковка з картону" width="370">
                     <h2>Проєкт Boxes</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
-                <li href="#"></a><img src="./images/img13.jpg" alt="Монітор" width="370">
+                <li></a><img src="./images/img13.jpg" alt="Монітор" width="370">
                     <h2>Inspiration has no Borders</h2>
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
-                <li href="#"><img src="./images/img14.jpg" alt="Журнал" width="370">
+                <li><img src="./images/img14.jpg" alt="Журнал" width="370">
                     <h2>Видання Limited Edition</h2>
                     <p><span class="accent">Дизайн</span></p>
                 </li>
-                <li href="#"></a><img src="./images/img15.jpg" alt="Бірка" width="370">
+                <li></a><img src="./images/img15.jpg" alt="Бірка" width="370">
                     <h2>Проєкт LAB</h2>
                     <p><span class="accent">Маркетинг</span></p>
                 </li>
-                <li href="#"></a><img src="./images/img16.jpg" alt="Робоче місце" width="370">
+                <li></a><img src="./images/img16.jpg" alt="Робоче місце" width="370">
                     <h2>Growind Business</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
