--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                 <li><button type="button">Маркетинг</button></li>
             </ul>
             <ul>
-                <li href="#"><img src="./images/img8.jpg" alt="Ноутбук" width="370">
+                <li><img src="./images/img8.jpg" alt="Ноутбук" width="370">
                     <h2>Технокряк</h2>
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
@@ -59,7 +59,7 @@
                     <h2>Проєкт Boxes</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
-                <li></a><img src="./images/img13.jpg" alt="Монітор" width="370">
+                <li><img src="./images/img13.jpg" alt="Монітор" width="370">
                     <h2>Inspiration has no Borders</h2>
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
@@ -67,11 +67,11 @@
                     <h2>Видання Limited Edition</h2>
                     <p><span class="accent">Дизайн</span></p>
                 </li>
-                <li></a><img src="./images/img15.jpg" alt="Бірка" width="370">
+                <li><img src="./images/img15.jpg" alt="Бірка" width="370">
                     <h2>Проєкт LAB</h2>
                     <p><span class="accent">Маркетинг</span></p>
                 </li>
-                <li></a><img src="./images/img16.jpg" alt="Робоче місце" width="370">
+                <li><img src="./images/img16.jpg" alt="Робоче місце" width="370">
                     <h2>Growind Business</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
