--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <a href="/" class="name"><span class="name-title">Web</span>Studio</a>
+    <header class="header">
+      <a href="index.html" class="name"><span class="name-title">Web</span>Studio</a>
       <!--Menu-->  
       <nav>
         <ul class="menu-list">                 
