--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <body>
     <!-- Header -->
     <header>
-      <a href="/" class="name"><span class="name-title">Web</span>Studio</a>
+      <a href="index.html" class="name"><span class="name-title">Web</span>Studio</a>
       <!--Menu-->  
       <nav>
         <ul class="menu-list">                 
@@ -44,7 +44,7 @@
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
                 <li><img src="./images/img9.jpg" alt="Баскетбол" width="370">
-                    <h2>Постер Nwe Orlean vs Golden Star</h2>
+                    <h2>Постер New Orlean vs Golden Star</h2>
                     <p><span class="accent">Дизайн</span></p>
                 </li>
                 <li><img src="./images/img10.jpg" alt="Логотип" width="370">
@@ -80,7 +80,7 @@
     </main>
     <!--Footer-->
     <footer>
-      <a href="/" class="name"><span class="name-title">Web</span>Studio</a>
+      <a href="index.html" class="name"><span class="name-title">Web</span>Studio</a>
       <address>
         <ul>      
           <li><a href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
