Робить CSS на скелет index

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio (Version 2.1)</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- Header -->
+    <!-- Хедер -->
     <header class="header">
       <a href="index.html" class="name"><span class="name-title">Web</span>Studio</a>
       <!--Menu-->  
@@ -20,18 +24,18 @@
       </nav> 
       <!--Links-->
       <ul>
-        <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!--Main-->
     <main>
-      <!--Board-->
+      <!--Шапка-->
       <section class="title">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="title-name">Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
-      <!--Describe-->
+      <!--Особливості-->
       <h2>Що нас характеризує</h2>
       <section class="describe">
         <ul>
@@ -49,7 +53,7 @@
           </li>
         </ul>
       </section>
-      <!--What we doing-->
+      <!--Чим ми займаємося-->
       <section class="our-business">
         <h2>Чим ми займаємося</h2>
         <ul>
@@ -58,7 +62,7 @@
           <li><img src="./images/img3.jpg" alt="laptop tablet" width="370" height="294"></li>
         </ul>
       </section>
-      <!--Our kommand-->
+      <!--Наша команда-->
       <section class="our-command">
         <h2>Наша команда</h2>
         <ul>
