--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Хедер -->
     <header class="header">
-      <a href="index.html" class="name"><span class="name-title">Web</span>Studio</a>
+      <a href="index.html" class="name-header"><span class="name-title">Web</span>Studio</a>
       <!--Menu-->  
       <nav>
         <ul class="menu-list">                 
@@ -57,28 +57,28 @@
       <section class="our-business">
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="./images/img1.jpg" alt="laptop algorithm" width="370" height="294"></li>
-          <li><img src="./images/img2.jpg" alt="laptop mobile" width="370" height="294"></li>
-          <li><img src="./images/img3.jpg" alt="laptop tablet" width="370" height="294"></li>
+          <li><img class="pic-one" src="./images/img1.jpg" alt="laptop algorithm" width="370" height="294"></li>
+          <li><img class="pic-two" src="./images/img2.jpg" alt="laptop mobile" width="370" height="294"></li>
+          <li><img class="pic-three" src="./images/img3.jpg" alt="laptop tablet" width="370" height="294"></li>
         </ul>
       </section>
       <!--Наша команда-->
       <section class="our-command">
         <h2>Наша команда</h2>
         <ul>
-          <li><img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+          <li><img class="pic-four" src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
-          <li><img src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260">
+          <li><img class="pic-five" src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
-          <li><img src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260">
+          <li><img class="pic-six" src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
-          <li><img src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260">
+          <li><img class="pic-seven" src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
@@ -87,7 +87,7 @@
     </main>
     <!--Footer-->
     <footer>
-      <a href="/" class="name"><span class="name-title">Web</span>Studio</a>
+      <a href="index.html" class="name-footer"><span class="name">Web</span>Studio</a>
       <address>
         <ul>      
           <li><a href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
