--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Хедер -->
     <header class="header">
       <a href="index.html" class="name-header"><span class="name-title">Web</span>Studio</a>
       <!--Menu-->  
-      <nav>
+      <nav class="menu">
         <ul class="menu-list">                 
-          <li><a href="#">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li class="menu-item"><a href="#">Студія</a></li>
+          <li class="menu-item"><a href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu-item"><a href="#">Контакти</a></li>
         </ul>
       </nav> 
       <!--Links-->
-      <ul>
-        <li><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
+      <ul class="menu-contacts">
+        <li class="menu-item"><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
+        <li class="menu-item"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!--Main-->
