--- a/portfolio.html
+++ b/portfolio.html
@@ -8,71 +8,71 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <a href="index.html" class="name"><span class="name-title">Web</span>Studio</a>
+    <header class="header">
+      <a href="index.html" class="name-header"><span class="name-title">Web</span>Studio</a>
       <!--Menu-->  
-      <nav>
+      <nav class="menu">
         <ul class="menu-list">                 
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="#">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li class="menu-item"><a href="./index.html">Студія</a></li>
+          <li class="menu-item"><a href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu-item"><a href="#">Контакти</a></li>
         </ul>
       </nav> 
       <!--Links-->
-      <ul>
-        <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
+      <ul class="menu-contacts">
+        <li class="menu-item"><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
+        <li class="menu-item"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!--Main-->
     <main>
         <section class="portfolio">
             <h1>Портфоліо з фотографіями</h1>
-            <ul>
-                <li><button type="button">Усі</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+            <ul class="portfolio-list">
+                <li class="portfolio-item"><button type="button">Усі</button></li>
+                <li class="portfolio-item"><button type="button">Веб-сайти</button></li>
+                <li class="portfolio-item"><button type="button">Додатки</button></li>
+                <li class="portfolio-item"><button type="button">Дизайн</button></li>
+                <li class="portfolio-item"><button type="button">Маркетинг</button></li>
             </ul>
             <ul>
-                <li><img src="./images/img8.jpg" alt="Ноутбук" width="370">
+                <li class="portfolio-img"><img src="./images/img8.jpg" alt="Ноутбук" width="370">
                     <h2>Технокряк</h2>
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
-                <li><img src="./images/img9.jpg" alt="Баскетбол" width="370">
+                <li class="portfolio-img"><img src="./images/img9.jpg" alt="Баскетбол" width="370">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p><span class="accent">Дизайн</span></p>
                 </li>
-                <li><img src="./images/img10.jpg" alt="Логотип" width="370">
+                <li class="portfolio-img"><img src="./images/img10.jpg" alt="Логотип" width="370">
                     <h2>Ресторан Seafood</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
-                <li><img src="./images/img11.jpg" alt="Навушники" width="370">
+                <li class="portfolio-img"><img src="./images/img11.jpg" alt="Навушники" width="370">
                     <h2>Проєкт Prime</h2>
                     <p><span class="accent">Маркетинг</span></p>
                 </li>
-                <li><img src="./images/img12.jpg" alt="Упаковка з картону" width="370">
+                <li class="portfolio-img"><img src="./images/img12.jpg" alt="Упаковка з картону" width="370">
                     <h2>Проєкт Boxes</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
-                <li><img src="./images/img13.jpg" alt="Монітор" width="370">
+                <li class="portfolio-img"><img src="./images/img13.jpg" alt="Монітор" width="370">
                     <h2>Inspiration has no Borders</h2>
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
-                <li><img src="./images/img14.jpg" alt="Журнал" width="370">
+                <li class="portfolio-img"><img src="./images/img14.jpg" alt="Журнал" width="370">
                     <h2>Видання Limited Edition</h2>
                     <p><span class="accent">Дизайн</span></p>
                 </li>
-                <li><img src="./images/img15.jpg" alt="Бірка" width="370">
+                <li class="portfolio-img"><img src="./images/img15.jpg" alt="Бірка" width="370">
                     <h2>Проєкт LAB</h2>
                     <p><span class="accent">Маркетинг</span></p>
                 </li>
-                <li><img src="./images/img16.jpg" alt="Робоче місце" width="370">
+                <li class="portfolio-img"><img src="./images/img16.jpg" alt="Робоче місце" width="370">
                     <h2>Growind Business</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
