--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio (Version 2.1)</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,11 +16,11 @@
     <header class="header">
       <a href="index.html" class="name-header"><span class="name-title">Web</span>Studio</a>
       <!--Menu-->  
-      <nav class="menu">
+      <nav>
         <ul class="menu-list">                 
-          <li class="menu-item"><a href="#">Студія</a></li>
-          <li class="menu-item"><a href="./portfolio.html">Портфоліо</a></li>
-          <li class="menu-item"><a href="#">Контакти</a></li>
+          <li class="menu-item" a href="#">Студія</a></li>
+          <li class="menu-item" a href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu-item" a href="#">Контакти</a></li>
         </ul>
       </nav> 
       <!--Links-->
