--- a/portfolio.html
+++ b/portfolio.html
@@ -15,11 +15,11 @@
     <header class="header">
       <a href="index.html" class="name-header"><span class="name-title">Web</span>Studio</a>
       <!--Menu-->  
-      <nav class="menu">
+      <nav>
         <ul class="menu-list">                 
-          <li class="menu-item"><a href="./index.html">Студія</a></li>
-          <li class="menu-item"><a href="./portfolio.html">Портфоліо</a></li>
-          <li class="menu-item"><a href="#">Контакти</a></li>
+          <li class="menu-item" a href="./index.html">Студія</a></li>
+          <li class="menu-item" a href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu-item" a href="#">Контакти</a></li>
         </ul>
       </nav> 
       <!--Links-->
