Створює оформлення меню та особливостей

--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio (Version 2.1)</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- Хедер -->
+    <!-- Header -->
     <header class="header">
       <a href="index.html" class="name-header"><span class="name-title">Web</span>Studio</a>
-      <!--Menu-->  
+      <!--Меню-->  
       <nav>
         <ul class="menu-list">                 
-          <li class="menu-item" a href="#">Студія</a></li>
+          <li class="menu-item" a href="./index.html">Студія</a></li>
           <li class="menu-item" a href="./portfolio.html">Портфоліо</a></li>
-          <li class="menu-item" a href="#">Контакти</a></li>
+          <li class="menu-item" a href="">Контакти</a></li>
         </ul>
       </nav> 
-      <!--Links-->
+      <!--Лінки зв'язку-->
       <ul class="menu-contacts">
-        <li class="menu-item"><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
-        <li class="menu-item"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
+        <li class="menu-item-cont"><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
+        <li class="menu-item-cont"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!--Main-->
@@ -37,30 +36,30 @@
         <button type="button">Замовити послугу</button>
       </section>
       <!--Особливості-->
-      <h2>Що нас характеризує</h2>
       <section class="describe">
-        <ul>
-          <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+        <h2 class="describe-title">Що нас характеризує</h2>
+        <ul class="describe-list">
+          <li class="describe-item"><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
-          <li><h3>ПУНКТУАЛЬНІСТЬ</h3>        
+          <li class="describe-item"><h3>ПУНКТУАЛЬНІСТЬ</h3>        
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
-          <li><h3>ПЛАНУВАННЯ</h3>           
+          <li class="describe-item"><h3>ПЛАНУВАННЯ</h3>           
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
-          <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>        
+          <li class="describe-item"><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>        
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
       <!--Чим ми займаємося-->
       <section class="our-business">
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li><img class="pic-one" src="./images/img1.jpg" alt="laptop algorithm" width="370" height="294"></li>
-          <li><img class="pic-two" src="./images/img2.jpg" alt="laptop mobile" width="370" height="294"></li>
-          <li><img class="pic-three" src="./images/img3.jpg" alt="laptop tablet" width="370" height="294"></li>
+        <h2 class="our-business-title">Чим ми займаємося</h2>
+        <ul class="our-business-list">
+          <li class="our-business-item"><img class="pic-one" src="./images/img1.jpg" alt="laptop algorithm" width="370" height="294"></li>
+          <li class="our-business-item"><img class="pic-two" src="./images/img2.jpg" alt="laptop mobile" width="370" height="294"></li>
+          <li class="our-business-item"><img class="pic-three" src="./images/img3.jpg" alt="laptop tablet" width="370" height="294"></li>
         </ul>
       </section>
       <!--Наша команда-->
