--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </nav> 
       <!--Лінки зв'язку-->
       <ul class="menu-contacts">
-        <li class="menu-item-cont"><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
-        <li class="menu-item-cont"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
+       <li><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
+       <li><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!--Main-->
