Формує хедер в портіоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,20 +13,20 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <a href="index.html" class="name-header"><span class="name-title">Web</span>Studio</a>
+      <a href="./index.html" class="name-header"><span class="name-title">Web</span>Studio</a>
       <!--Меню-->  
       <nav>
         <ul class="menu-list">                 
           <li class="menu-item" a href="./index.html">Студія</a></li>
           <li class="menu-item" a href="./portfolio.html">Портфоліо</a></li>
-          <li class="menu-item" a href="">Контакти</a></li>
+          <li class="menu-item" a href="#">Контакти</a></li>
         </ul>
       </nav> 
       <!--Лінки зв'язку-->
-      <ul class="menu-contacts">
-        <li class="menu-item-cont"><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
-        <li class="menu-item-cont"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
-      </ul>
+        <ul class="menu-contacts">
+          <li class="contact-mail"><a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a></li>
+          <li class="contact-tel"><a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a></li>
+        </ul>
     </header>
     <!--Main-->
     <main>
