--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <a href="./index.html" class="name-header"><span class="name-title">Web</span>Studio</a>
+      <a class="name-header" href="./index.html"><span class="name-title">Web</span>Studio</a>
       <!--Меню-->  
       <nav>
         <ul class="menu-list">                 
-          <li class="menu-item" a href="./index.html">Студія</a></li>
-          <li class="menu-item" a href="./portfolio.html">Портфоліо</a></li>
-          <li class="menu-item" a href="#">Контакти</a></li>
+          <li class="menu-item"><a href="./index.html">Студія</a></li>
+          <li class="menu-item"><a href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu-item"><a href="#">Контакти</a></li>
         </ul>
       </nav> 
       <!--Лінки зв'язку-->
@@ -40,45 +40,45 @@
         <h2 class="describe-title">Що нас характеризує</h2>
         <ul class="describe-list">
           <li class="describe-item"><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p class="describe-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li class="describe-item"><h3>ПУНКТУАЛЬНІСТЬ</h3>        
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p class="describe-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li class="describe-item"><h3>ПЛАНУВАННЯ</h3>           
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p class="describe-text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li class="describe-item"><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>        
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p class="describe-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
       <!--Чим ми займаємося-->
       <section class="our-business">
-        <h2 class="our-business-title">Чим ми займаємося</h2>
+      <h2 class="our-business-title">Чим ми займаємося</h2>        
         <ul class="our-business-list">
-          <li class="our-business-item"><img class="pic-one" src="./images/img1.jpg" alt="laptop algorithm" width="370" height="294"></li>
-          <li class="our-business-item"><img class="pic-two" src="./images/img2.jpg" alt="laptop mobile" width="370" height="294"></li>
-          <li class="our-business-item"><img class="pic-three" src="./images/img3.jpg" alt="laptop tablet" width="370" height="294"></li>
+          <li class="our-business-item"><img src="./images/img1.jpg" alt="laptop algorithm" width="370" height="294"></li>
+          <li class="our-business-item"><img src="./images/img2.jpg" alt="laptop mobile" width="370" height="294"></li>
+          <li class="our-business-item"><img src="./images/img3.jpg" alt="laptop tablet" width="370" height="294"></li>
         </ul>
       </section>
       <!--Наша команда-->
       <section class="our-command">
-        <h2>Наша команда</h2>
-        <ul>
-          <li><img class="pic-four" src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+        <h2 class="our-command-title">Наша команда</h2>     
+        <ul class="our-command-list">
+          <li class="our-command-item"><img class="pic-one" src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
-          <li><img class="pic-five" src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260">
+          <li class="our-command-item"><img class="pic-two" src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
-          <li><img class="pic-six" src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260">
+          <li class="our-command-item"><img class="pic-three" src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
-          <li><img class="pic-seven" src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260">
+          <li class="our-command-item"><img class="pic-four" src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
@@ -86,13 +86,13 @@
       </section>
     </main>
     <!--Footer-->
-    <footer>
-      <a href="index.html" class="name-footer"><span class="name">Web</span>Studio</a>
+    <footer class="footer">
+      <a class="name-footer" href="index.html"><span class="name-title">Web</span>Studio</a>
       <address>
-        <ul>      
-          <li><a href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
+        <ul class="adress-list">      
+          <li class="adress-item"><a href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li class="adress-item"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+          <li class="adress-item"><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
         </ul>      
       </address>
     </footer>
