--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
       <!--Меню-->  
       <nav>
         <ul class="menu-list">                 
-          <li class="menu-item" a href="./index.html">Студія</a></li>
-          <li class="menu-item" a href="./portfolio.html">Портфоліо</a></li>
-          <li class="menu-item" a href="#">Контакти</a></li>
+          <li class="menu-item"><a href="./index.html">Студія</a></li>
+          <li class="menu-item"><a href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu-item"><a href="#">Контакти</a></li>
         </ul>
       </nav> 
       <!--Лінки зв'язку-->
