--- a/portfolio.html
+++ b/portfolio.html
@@ -13,13 +13,13 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <a href="./index.html" class="name-header"><span class="name-title">Web</span>Studio</a>
+      <a class="name-header" href="./index.html"><span class="name-title">Web</span>Studio</a>
       <!--Меню-->  
       <nav>
         <ul class="menu-list">                 
-          <li class="menu-item"><a href="./index.html">Студія</a></li>
-          <li class="menu-item"><a href="./portfolio.html">Портфоліо</a></li>
-          <li class="menu-item"><a href="#">Контакти</a></li>
+          <li class="menu-item"><a href="./index.html" class="link">Студія</a></li>
+          <li class="menu-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li class="menu-item"><a href="#" class="link">Контакти</a></li>
         </ul>
       </nav> 
       <!--Лінки зв'язку-->
@@ -31,7 +31,7 @@
     <!--Main-->
     <main>
         <section class="portfolio">
-            <h1>Портфоліо з фотографіями</h1>
+            <h1 class="describe-title">Портфоліо з фотографіями</h1>
             <ul class="portfolio-list">
                 <li class="portfolio-item"><button type="button">Усі</button></li>
                 <li class="portfolio-item"><button type="button">Веб-сайти</button></li>
@@ -39,40 +39,40 @@
                 <li class="portfolio-item"><button type="button">Дизайн</button></li>
                 <li class="portfolio-item"><button type="button">Маркетинг</button></li>
             </ul>
-            <ul>
+            <ul class="photo-list">
                 <li class="portfolio-img"><img src="./images/img8.jpg" alt="Ноутбук" width="370">
                     <h2>Технокряк</h2>
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
-                <li class="portfolio-img"><img src="./images/img9.jpg" alt="Баскетбол" width="370">
+                <li class="photo-img"><img src="./images/img9.jpg" alt="Баскетбол" width="370">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p><span class="accent">Дизайн</span></p>
                 </li>
-                <li class="portfolio-img"><img src="./images/img10.jpg" alt="Логотип" width="370">
+                <li class="photo-img"><img src="./images/img10.jpg" alt="Логотип" width="370">
                     <h2>Ресторан Seafood</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
-                <li class="portfolio-img"><img src="./images/img11.jpg" alt="Навушники" width="370">
+                <li class="photo-img"><img src="./images/img11.jpg" alt="Навушники" width="370">
                     <h2>Проєкт Prime</h2>
                     <p><span class="accent">Маркетинг</span></p>
                 </li>
-                <li class="portfolio-img"><img src="./images/img12.jpg" alt="Упаковка з картону" width="370">
+                <li class="photo-img"><img src="./images/img12.jpg" alt="Упаковка з картону" width="370">
                     <h2>Проєкт Boxes</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
-                <li class="portfolio-img"><img src="./images/img13.jpg" alt="Монітор" width="370">
+                <li class="photo-img"><img src="./images/img13.jpg" alt="Монітор" width="370">
                     <h2>Inspiration has no Borders</h2>
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
-                <li class="portfolio-img"><img src="./images/img14.jpg" alt="Журнал" width="370">
+                <li class="photo-img"><img src="./images/img14.jpg" alt="Журнал" width="370">
                     <h2>Видання Limited Edition</h2>
                     <p><span class="accent">Дизайн</span></p>
                 </li>
-                <li class="portfolio-img"><img src="./images/img15.jpg" alt="Бірка" width="370">
+                <li class="photo-img"><img src="./images/img15.jpg" alt="Бірка" width="370">
                     <h2>Проєкт LAB</h2>
                     <p><span class="accent">Маркетинг</span></p>
                 </li>
-                <li class="portfolio-img"><img src="./images/img16.jpg" alt="Робоче місце" width="370">
+                <li class="photo-img"><img src="./images/img16.jpg" alt="Робоче місце" width="370">
                     <h2>Growind Business</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
@@ -80,13 +80,13 @@
         </section>
     </main>
     <!--Footer-->
-    <footer>
-      <a href="index.html" class="name"><span class="name-title">Web</span>Studio</a>
+    <footer class="footer">
+      <a class="name-footer" href="index.html"><span class="name-title">Web</span>Studio</a>
       <address>
-        <ul>      
-          <li><a href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
+        <ul class="adress-list">      
+          <li class="adress-item"><a href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li class="adress-item"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+          <li class="adress-item"><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
         </ul>      
       </address>
     </footer>
