Виправляє зауваження до ДЗ

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Studio (Version 2.1)</title>
+    <title>Веб Студія</title>
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,8 +31,8 @@
     <!--Main-->
     <main>
       <!--Шапка-->
-      <section class="title">
-        <h1 class="title-name">Ефективні рішення для вашого бізнесу</h1>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <!--Особливості-->
@@ -57,9 +57,9 @@
       <section class="our-business">
       <h2 class="our-business-title">Чим ми займаємося</h2>        
         <ul class="our-business-list">
-          <li class="our-business-item"><img src="./images/img1.jpg" alt="laptop algorithm" width="370" height="294"></li>
-          <li class="our-business-item"><img src="./images/img2.jpg" alt="laptop mobile" width="370" height="294"></li>
-          <li class="our-business-item"><img src="./images/img3.jpg" alt="laptop tablet" width="370" height="294"></li>
+          <li class="our-business-item"><img src="./images/img1.jpg" alt="Складання алглритмів на ноутбуці" width="370" height="294"></li>
+          <li class="our-business-item"><img src="./images/img2.jpg" alt="Розробкв мобільних додатків" width="370" height="294"></li>
+          <li class="our-business-item"><img src="./images/img3.jpg" alt="Кольорова гама на планшеті" width="370" height="294"></li>
         </ul>
       </section>
       <!--Наша команда-->
@@ -68,19 +68,19 @@
         <ul class="our-command-list">
           <li class="our-command-item"><img class="pic-one" src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
             <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li class="our-command-item"><img class="pic-two" src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260">
             <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li class="our-command-item"><img class="pic-three" src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260">
             <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li class="our-command-item"><img class="pic-four" src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260">
             <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
