--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,48 +41,48 @@
             </ul>
             <ul class="photo-list">
                 <li class="portfolio-img">
-                    <img src="./images/img8.jpg" alt="Ноутбук" width="370">
+                    <img src="./images/img8.jpg" alt="Ноутбук" width="370" height="294">
                     <h2>Технокряк</h2>
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
                 <li class="photo-img">
-                    <img src="./images/img9.jpg" alt="Баскетбол" width="370">
-                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <img src="./images/img9.jpg" alt="Баскетбол" width="370" height="294">
+                    <h2>Постер <span lang="en">Orlean vs Golden Star</span></h2>
                     <p><span class="accent">Дизайн</span></p>
                 </li>
                 <li class="photo-img">
-                    <img src="./images/img10.jpg" alt="Логотип" width="370">
-                    <h2>Ресторан Seafood</h2>
+                    <img src="./images/img10.jpg" alt="Логотип" width="370" height="294">
+                    <h2>Ресторан <span lang="en">Seafood</span></h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
                 <li class="photo-img">
-                    <img src="./images/img11.jpg" alt="Навушники" width="370">
-                    <h2>Проєкт Prime</h2>
+                    <img src="./images/img11.jpg" alt="Навушники" width="370" height="294">
+                    <h2>Проєкт <span lang="en">Prime</span></h2>
                     <p><span class="accent">Маркетинг</span></p>
                 </li>
                 <li class="photo-img">
-                    <img src="./images/img12.jpg" alt="Упаковка з картону" width="370">
-                    <h2>Проєкт Boxes</h2>
+                    <img src="./images/img12.jpg" alt="Упаковка з картону" width="370" height="294">
+                    <h2>Проєкт <span lang="en">Boxes</span></h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
                 <li class="photo-img">
-                    <img src="./images/img13.jpg" alt="Монітор" width="370">
-                    <h2>Inspiration has no Borders</h2>
+                    <img src="./images/img13.jpg" alt="Монітор" width="370" height="294">
+                    <h2 lang="en">Inspiration has no Borders</h2>
                     <p><span class="accent">Веб-сайт</span></p>
                 </li>
                 <li class="photo-img">
-                    <img src="./images/img14.jpg" alt="Журнал" width="370">
-                    <h2>Видання Limited Edition</h2>
+                    <img src="./images/img14.jpg" alt="Журнал" width="370" height="294">
+                    <h2>Видання <span lang="en">Limited Edition</span></h2>
                     <p><span class="accent">Дизайн</span></p>
                 </li>
                 <li class="photo-img">
-                    <img src="./images/img15.jpg" alt="Бірка" width="370">
-                    <h2>Проєкт LAB</h2>
+                    <img src="./images/img15.jpg" alt="Бірка" width="370" height="294">
+                    <h2>Проєкт <span lang="en">LAB</span></h2>
                     <p><span class="accent">Маркетинг</span></p>
                 </li>
                 <li class="photo-img">
-                    <img src="./images/img16.jpg" alt="Робоче місце" width="370">
-                    <h2>Growind Business</h2>
+                    <img src="./images/img16.jpg" alt="Робоче місце" width="370" height="294">
+                    <h2 lang="en">Growind Business</h2>
                     <p><span class="accent">Додаток</span></p>
                 </li>
             </ul>
