--- a/index.html
+++ b/index.html
@@ -151,7 +151,12 @@
         <address>
           <ul class="adress-list">
             <li class="adress-item">
-              <a href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
+              <a
+                href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA"
+                target="_blank"
+                rel="noopener noreferrer"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
             </li>
             <li class="adress-item">
               <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
