Виправляє помилки валідатора

--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Веб Студія</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
   </head>
   <body>
     <!-- Header -->
@@ -82,28 +80,23 @@
         <h2 class="our-business-title">Чим ми займаємося</h2>
         <ul class="our-business-list">
           <li class="our-business-item">
-            <img
-              src="./images/img1.jpg"
-              alt="Складання алглритмів на ноутбуці"
+            <img src="./images/img1.jpg" alt="Складання алглритмів на ноутбуці"
               width="370"
-              height="294"
-            />
+              height="294">
           </li>
           <li class="our-business-item">
             <img
               src="./images/img2.jpg"
               alt="Розробкв мобільних додатків"
               width="370"
-              height="294"
-            />
+              height="294">
           </li>
           <li class="our-business-item">
             <img
               src="./images/img3.jpg"
               alt="Кольорова гама на планшеті"
               width="370"
-              height="294"
-            />
+              height="294">
           </li>
         </ul>
       </section>
@@ -113,28 +106,28 @@
         <ul class="our-command-list">
           <li class="our-command-item">
             <div class="pic-worker">
-              <img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+              <img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
               <h3 class="our-name">Ігор Дем'яненко</h3>
               <p class="our-job" lang="en">Product Designer</p>
             </div>
           </li>
           <li class="our-command-item">
             <div class="pic-worker">
-              <img src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+              <img src="./images/img5.jpg" alt="Ольга Рєпіна" width="270" height="260">
               <h3 class="our-name">Ольга Рєпіна</h3>
               <p class="our-job" lang="en">Frontend Developer</p>
             </div>
           </li>
           <li class="our-command-item">
             <div class="pic-worker">
-              <img src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260" />
+              <img src="./images/img6.jpg" alt="Микола Тарасов" width="270" height="260">
               <h3 class="our-name">Микола Тарасов</h3>
               <p class="our-job" lang="en">Marketing</p>
             </div>
           </li>
           <li class="our-command-item">
             <div class="pic-worker">
-              <img src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+              <img src="./images/img7.jpg" alt="Михайло Єрмаков" width="270" height="260">
               <h3 class="our-name">Михайло Єрмаков</h3>
               <p class="our-job" lang="en">UI Designer</p>
             </div>
